Fix typo in HTML title tag

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Actividad N°2: Mi secuencia didactica la magia de la literatur</title>
+  <title>Actividad N°2: Mi secuencia didactica la magia de la literatura</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
